Versao com post sign up funcional

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "projeto12-tweteroo",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "node ./src/app.js"
   },
   "repository": {
     "type": "git",
